randomCoordinate on game.js need testing to prevent out of bounds

--- a/src/style.css
+++ b/src/style.css
@@ -93,3 +93,7 @@
 .sunk {
     background-color: darkred;
 }
+
+.ship{
+    background-color: darkgreen;
+}
